# Phasmid

./: .gitignore  .markdownlint-cli2.jsonc  .markdownlintignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  NOTICE  README.md  SECURITY.md  THIRD_PARTY_LICENSES.md  WEBUI_DESIGN.md  main.py  phasmid  pyproject.toml  requirements-dev.txt  requirements.txt
docs/: BUS_FACTOR.md  CLAIMS.md  COERCION_SAFE_DELAYING.md  CONFIGURATION.md  CRYPTO_INVENTORY.md  CRYPTO_MODULE_DESIGN.md  DEPENDENCIES.md  DUAL_PASSPHRASE_APPROVAL_ANALYSIS.md  FIELD_TEST_PROCEDURE.md  JANUS_EIDOLON_SYSTEM.md  KEY_LIFECYCLE.md  LIGHTWEIGHT_RECOGNITION_EVALUATION.md  LUKS_LAYER.md  MILITARY_GRADE_HARDENING_PROJECT.md  MILITARY_GRADE_HARDENING_ROADMAP.md  MULTI_OBJECT_CUE_RECOMMENDATION.md  NON_CLAIMS.md  OBJECT_CUE_LIGHTWEIGHT_AI_REEVALUATION.md  OPERATIONS.md  PHASE1_IMPLEMENTATION_CHECKLIST.md  PHASMID_ARCHITECTURE.md  PI_ZERO2W_FIELD_TEST.md  PI_ZERO2W_REMOTE_FIELD_TEST_ISSUE_DRAFT.md  README_INDEX.md  REPRODUCIBLE_BUILDS.md  RESTRICTED_ACTIONS.md  RESTRICTED_RECOVERY_OBSERVABILITY.md  REVIEW_VALIDATION_RECORD.md  ROADMAP_HISTORY.md  RPI_ZERO_APPLIANCE_DEPLOYMENT.md  RPI_ZERO_DEPLOYMENT.md  SEIZURE_REVIEW_CHECKLIST.md  SOLUTION_READINESS_PLAN.md  SOURCE_SAFE_WORKFLOW.md  SPECIFICATION.md  STATE_RECOVERY.md  TESTING_GUIDELINES.md  THREAT_ANALYSIS_STRIDE.md  THREAT_MODEL.md  TUI_OPERATOR_CONSOLE.md  (+2 more)
profiles/: pi-zero2w.json
scripts/: bench_kdf.py  bench_object_gate.py  bootstrap_pi.sh  check_claims_coverage.py  check_test_naming.py  fetch_object_model.py  generate_release_artifacts.py  luks_mount.sh  validate_pi_environment.sh
tests/: README.md  TEST_RETENTION_MATRIX.md  test_ai_gate.py  test_approval_flow.py  test_attempt_limiter.py  test_audit.py  test_capabilities.py  test_claims_coverage_script.py  test_cli.py  test_config.py  test_container_layout.py  test_context_profile.py  test_crypto_boundary.py  test_docs_and_templates.py  test_doctor_m4.py  test_dual_approval_support.py  test_dummy_generator.py  test_dummy_profile_eval.py  test_emergency_daemon.py  test_face_lock.py  test_gv_core.py  test_kdf_engine.py  test_kdf_subkeys.py  test_lightweight_face_recognizer.py  test_lightweight_object_matcher.py  test_luks_eval.py  test_luks_layer.py  test_metadata.py  (+24 more)
(+180 files in other folders)
