[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "phantasm-vault"
version = "0.1.0"
description = "Local secure-storage prototype with camera-gated retrieval"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "cryptography==46.0.4",
    "fastapi==0.136.1",
    "jinja2==3.1.6",
    "numpy==2.2.6",
    "opencv-python==4.13.0.92",
    "python-multipart==0.0.27",
    "uvicorn==0.46.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
phantasm = ["templates/*.html"]
