[project]
name = "phasmid"
version = "0.1.3"
description = "Phasmid local-only coercion-aware storage prototype"
requires-python = ">=3.10"
dependencies = [
    "cryptography==46.0.7",
    "argon2-cffi==25.1.0",
    "fastapi==0.136.1",
    "jinja2==3.1.6",
    "numpy==2.2.6",
    "opencv-python-headless==4.13.0.92",
    "platformdirs==4.9.6",
    "python-multipart==0.0.27",
    "rich==15.0.0",
    "textual==8.2.5",
    "tomli==2.4.1; python_version < \"3.11\"",
    "tomli-w==1.2.0",
    "uvicorn==0.46.0",
]

[project.scripts]
phasmid = "phasmid.cli:main"

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B"]
ignore = [
    "E402", # Module level import not at top of file
    "E501", # Line too long
    "B008", # Do not perform function call in argument defaults (FastAPI Depends/File/Form)
]

[tool.black]
line-length = 88
target-version = ['py310']
include = '\\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false # Start relaxed
check_untyped_defs = true

[[tool.mypy.overrides]]
module = [
    "cv2",
    "numpy",
    "cryptography.*",
    "fastapi.*",
    "jinja2.*",
    "textual.*",
    "tomli_w"
]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = [
    "phasmid.ai_gate",
    "phasmid.face_lock"
]
ignore_errors = true

[tool.coverage.run]
omit = [
    "src/phasmid/tui/*",
]
